# helloworld

Projects/gtk-hello/: meson.build
Projects/gtk-hello/data/: com.github.smotynb.helloworld.desktop
Projects/gtk-hello/src/: Application.vala
